[feat] implement public product discounts
